--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <h1>How long you ready to run?</h1>
     <div class="btn-container">
-      <button><a href="">10 minutes</a></button>
+      <button><a href="./firstTimer/index.html">10 minutes</a></button>
       <button><a href="">15 minutes</a></button>
       <button><a href="">20 minutes</a></button>
     </div>
