--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>How long you ready to run?</h1>
     <div class="btn-container">
       <button><a href="./firstTimer/index.html">10 minutes</a></button>
-      <button><a href="">15 minutes</a></button>
-      <button><a href="">20 minutes</a></button>
+      <button><a href="./secondTimer/index.html">15 minutes</a></button>
+      <button><a href="./thirdTimer/index.html">20 minutes</a></button>
     </div>
 	 <video autoplay loop muted defaultMuted playinline id="myVideo">
 		<source src="./video/video1.mp4" type="video/mp4">
