Added script in JS for countdown timers

--- a/thirdTimer/index.html
+++ b/thirdTimer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>👟 10 minutes run</title>
+    <title>👟 20 minutes run</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,9 +14,9 @@
     />
   </head>
   <body>
-    <div class="btn-container">
+    <div class="btn-container container-countdown">
       <button><a href="../index.html">Home page</a></button>
-      <button id="countdown">10</button>
+      <button id="countdown">20:00</button>
       <button id="startButton">Start</button>
     </div>
     <audio id="player" autoplay loop>
