--- a/firstTimer/index.html
+++ b/firstTimer/index.html
@@ -14,9 +14,9 @@
     />
   </head>
   <body>
-    <div class="btn-container">
+    <div class="btn-container container-countdown">
       <button><a href="../index.html">Home page</a></button>
-      <button id="countdown">10</button>
+      <button id="countdown">10:00</button>
       <button id="startButton">Start</button>
     </div>
     <audio id="player" autoplay loop>
