Added video for home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button><a href="./thirdTimer/index.html">20 minutes</a></button>
     </div>
 	 <video autoplay loop muted defaultMuted playinline id="myVideo">
-		<source src="./video/video1.mp4" type="video/mp4">
+		<source src="./video/video-main.mp4" type="video/mp4">
 	 </video>
 	 <footer>
       <p>
