Added color on the buttons

--- a/thirdTimer/index.html
+++ b/thirdTimer/index.html
@@ -22,7 +22,7 @@
     <audio id="player" autoplay loop>
       <source src="../music/music3.mp3" type="audio/mp3" />
     </audio>
-	 <video id="myVideo" autoplay loop muted defaultMuted playinline>
+	 <video id="myVideo" autoplay loop muted defaultMuted playinline controls>
 		<source src="../video/video3.mp4" type="video/mp4">
 	 </video>
 	 <script src="./app.js"></script>
